Event-loop based virtual thread context